fixup! Add connector test for default column values